--- a/index.html
+++ b/index.html
@@ -12,30 +12,14 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="https://52hz.kr/css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="https://52hz.kr/css/animate.css">
     
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/mystyle.css">
-
-
-
-    <script> // http 접속 시 자동으로 https 로 전환시키는 스크립트
-        console.log("The URL of this page is: " + window.location.href);
-
-        let myUrl = window.location.href;
-        let dividedUrl = myUrl.split("52hz.kr/").reverse()[0];
-        console.log(dividedUrl)
-
-        console.log("http://52hz.kr/" + dividedUrl)
-
-        if ( myUrl === "http://52hz.kr/" + dividedUrl) {
-        window.location.href='https://52hz.kr/' + dividedUrl;
-        }
-    </script>
+    <link rel="stylesheet" href="https://52hz.kr/css/flaticon.css">
+    <link rel="stylesheet" href="https://52hz.kr/css/icomoon.css">
+    <link rel="stylesheet" href="https://52hz.kr/css/style.css">
+    <link rel="stylesheet" href="https://52hz.kr/css/mystyle.css">
 
 
   </head>
