--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://52hz.kr/css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
+    <link rel="stylesheet" type="text/css" href="https://52hz.kr/css/ionicons.min.css">
     <link rel="stylesheet" href="https://52hz.kr/css/animate.css">
     
     <link rel="stylesheet" href="https://52hz.kr/css/flaticon.css">
